# greengrass-sdk-rs

./: .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
include/: aws.h
src/: aws.cc  connection.rs  env.rs  error.rs  ffi.rs  lib.rs  lifecycle_state.rs  paused_updates.rs
src/protocol/: headers.rs  mod.rs  prelude.rs
src/protocol/headers/: message_flags.rs  message_type.rs  mod.rs  value.rs
src/protocol/message/: component_update.rs  handshake.rs  mod.rs  state.rs
tests/: e2e.rs
