[package]
name = "greengrass-sdk-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "3.2.1"
endi = "1.1.0"
enumflags2 = "0.7.10"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["rt", "sync", "net", "io-util"] }
tracing = "0.1"
uuid = "1.11.0"

[dev-dependencies]
pretty-hex = "0.4.1"
